==> fengelhardt/ARM-HaLib/docs/MAC_v_2_7_1/PAL/AVR32/AT32UC3B1128/Boards/REB_7_0_STK600/pal_board.c <==
#include <stdbool.h>
#include <stdlib.h>
#include "pal_types.h"
#include "pal.h"
#include "pal_boardtypes.h"
#include "pal_config.h"
#include "pal_internal.h"
#include "pal_timer.h"

void pal_trx_read_timestamp(uint32_t *timestamp)
{
    /*
     * Everytime a transceiver interrupt is triggred, input capture register of
     * the AVR is latched. The 'sys_time' is concatenated to the ICR to
     * generate the time stamp of the received frambe.
     * 'ICR_Higher byte'   'ICR_Lower byte'
     *  ---------|--------- => 32 bit timestamp
     *   16 bits   16 bits
     */
    *timestamp  = (uint32_t)TIMER_HIGH_REGISTER << (uint32_t)16;
    *timestamp |= (uint32_t)TIMER_LOW_REGISTER;
}

void gpio_init(void)
{
#if ((defined UART0) ||(defined UART1) ||(defined UART2) || (defined UART3))
    /* Set-up the UART pins to respective functions. */
    gpio_enable_module_pin(USART_RX, USART_RX_FUNCTION);
    gpio_enable_module_pin(USART_TX, USART_TX_FUNCTION);
#endif

    /* Initialize peripheral interrupt pin. */
    gpio_enable_input(EXT_INT);

    /* Initialize TRX_RST, SLP_TR and SEL as GPIO. */
    gpio_enable_output(TRX_RST);
    gpio_enable_output(SLP_TR);
    gpio_set_gpio_pin(SLP_TR);
    gpio_enable_output(SEL);
    gpio_set_gpio_pin(SEL);

    /* Initialize pins for SPI pins(11 - 13) to respective functions. */
    gpio_enable_module_pin(MOSI, MOSI_FUNCTION);
    gpio_enable_module_pin(MISO, MISO_FUNCTION);
    gpio_enable_module_pin(SCK, SCK_FUNCTION);
}

void timer_init_non_generic(void)
{
    /* Timer channel 0 configuration */
    /* Set up the timer channel0 to make a 1 millisecond output to feed channel 1. */
    avr32_tc_cmr_t cmr_conf = {.waveform = {
            .acpc = AVR32_TC_CMR0_ACPC_CLEAR,             /* 0x02 - CLear- RC Compare Effect on TIOA */
            .acpa = AVR32_TC_CMR0_ACPA_SET,               /* 0x01 - Set - RA Compare Effect on TIOA */
            .wave = SET,                                  /* 0x01 - Capture Mode is Disabled */
            .wavsel = AVR32_TC_CMR0_WAVSEL_UP_NO_AUTO,    /* 0x02 - UP mode with automatic trigger on RC Compare */
            .tcclks = AVR32_TC_CMR0_TCCLKS_TIMER_CLOCK4,  /* 0x01 - F_pba/32 = 0.9 Microsecond */
        }
    };

    /*AVR32_TC0.channel[0].CMR*/
    TC_CH0.CMR = cmr_conf;
    /*All interrupts are disabled for timers*/
    TC_CH0.idr = DISABLE_ALL_TIMER_INTERRUPTS;
    /*Register A value to Comapre*/
    TC_CH0.ra = ONE_MILLISECOND_DELAY;
    /*Register C value to Comapre*/
    TC_CH0.rc = ONE_MILLISECOND_OVERFLOW;
    /*Clock is Enabled for channel 0*/
    TC_CH0.CCR.clken = AVR32_TC_CCR0_CLKEN_SIZE;

    /* Timer channel 1 configuration */
    avr32_tc_cmr_t cmr_conf2 = {.waveform = {
            .bswtrg = SET,                                /* Software trigger enabled*/
            .beevt = NOT_SET,                             /* External Event Effect on TIOB*/
            .eevt = NOT_SET,                               /* TIOB is chosen as the external event signal,
                                                         it is configured as an input*/
            .eevtedg = SET,                               /* Event Selection Rising Edge*/
            .wave = SET,                                  /* 0x01 - Capture Mode is Disabled*/
            .wavsel = AVR32_TC_CMR0_WAVSEL_UP_AUTO,       /* 0x02 - UP mode with automatic trigger on RC Compare*/
            .tcclks = AVR32_TC_CMR0_TCCLKS_XC1,           /* Clock is chained from channel 0 */
        }
    };

    /*AVR32_TC0.channel[1].CMR*/
    TC_CH1.CMR = cmr_conf2 ;
    /* All interrupts are disabled for timers*/
    TC_CH1.idr = DISABLE_ALL_TIMER_INTERRUPTS;
    /*Clock is Enabled for channel 1*/
    TC_CH1.CCR.clken = AVR32_TC_CCR1_CLKEN_SIZE;


    /* Timer channel 2 configuration */
    avr32_tc_cmr_t cmr_conf3 = {.capture = {
            .ldrb = NOT_SET,
            .ldra = SET,                                   /*Loading Each Edge*/
            .wave = NOT_SET,                               /*TIOB is chosen as the external event & configured as an input*/
            .cpctrg = NOT_SET,
            .abetrg = SET,                                 /*TIOA as External Trigger*/
            .etrgedg = SET,                                /*Event Selection Rising Edge*/
            .ldbdis = NOT_SET,
            .ldbstop = NOT_SET,
            .burst = NOT_SET,
            .tcclks = AVR32_TC_CMR0_TCCLKS_TIMER_CLOCK4,   /*External timer clock is selected & it gives a clock of 1 Mhz*/
        }
    };
    /*Configuring AVR32_TC1.channel[0].CMR*/
    TC_CH2.CMR = cmr_conf3 ;

    /*All interrupts are disabled for timers*/
    TC_CH2.idr = DISABLE_ALL_TIMER_INTERRUPTS;

    /*Enabling the interrupt for the capture*/
    TC_CH2.ier = AVR32_TC_IER0_LDRAS_MASK ;

    TC_CH2.CCR.clken = AVR32_TC_CCR0_CLKEN_SIZE;

    /*Chaining timer channels & External Clock Signal 1 Selection, TIOA0 is Given as i/p*/
    TC.BMR.tc1xc1s = AVR32_TC_BMR_TC1XC1S_TIOA0;

    /*Software trigger simultaneously for each of the channels*/
    TC.BCR.sync = AVR32_TC_SYNC_SIZE;

    /* Timer/Counter 1 configuration */
    avr32_tc_cmr_t cmr_conf4 = {.waveform = {
            .bswtrg = SET,                                  /*Software trigger enabled*/
            .beevt = NOT_SET,                               /*External Event Effect on TIOB*/
            .eevt = NOT_SET,                                 /*TIOB is chosen as the external event signal,
                                                          it is configured as an input*/
            .eevtedg = SET,                                 /*Event Selection Rising Edge*/
            .wave = SET,                                    /*Capture Mode is Disabled*/
            .wavsel = AVR32_TC_CMR0_WAVSEL_UP_AUTO,         /*UP mode with automatic trigger on RC Compare*/
            .tcclks = AVR32_TC_CMR0_TCCLKS_TIMER_CLOCK4,    /*External timer clock is selected & it gives a clock of 1 Mhz*/
        }
    };
    /*Configuring AVR32_TC1.channel[1].CMR*/
    TC2_CH0.CMR = cmr_conf4 ;
    /*All interrupts are disabled for timers*/
    TC2_CH0.idr = DISABLE_ALL_TIMER_INTERRUPTS;

#ifdef ENABLE_HIGH_PRIO_TMR
    avr32_tc_cmr_t cmr_conf5 = {.waveform = {
            .bswtrg = SET,                                  /*Software trigger enabled*/
            .beevt = NOT_SET,                               /*External Event Effect on TIOB*/
            .eevt = NOT_SET,                                 /*TIOB is chosen as the external event signal,
                                                          it is configured as an input*/
            .eevtedg = SET,                                 /*Event Selection Rising Edge*/
            .wave = SET,                                    /*Capture Mode is Disabled*/
            .wavsel = AVR32_TC_CMR0_WAVSEL_UP_AUTO,         /*UP mode with automatic trigger on RC Compare*/
            .tcclks = AVR32_TC_CMR0_TCCLKS_TIMER_CLOCK4,    /*External timer clock is selected & it gives a clock of 1 Mhz*/
        }
    };
    /*Configuring AVR32_TC1.channel[1].CMR*/
    TC2_CH1.CMR = cmr_conf5 ;
    /*All interrupts are disabled for timers*/
    TC2_CH1.idr = DISABLE_ALL_TIMER_INTERRUPTS;
    /*Test value to test the output compare effectively*/
    TC2_CH1.CCR.clken = AVR32_TC_CCR0_CLKEN_SIZE;
#endif

    /*Enable overflow interrupt*/
    TC2_CH0.ier   =  AVR32_TC_IER0_COVFS_MASK;

    /*Enabling the clock*/
    TC2_CH0.CCR.clken = AVR32_TC_CCR0_CLKEN_SIZE;

    /*Chaining timer channel 0 & synching them */
    TC.BCR.sync = AVR32_TC_SYNC_SIZE;

    /*Chaining timer channel 0 & synching them */
    TC2.BCR.sync = AVR32_TC_SYNC_SIZE;
}

void timer_init_non_generic(void)
{
    /* Timer channel 0 configuration */
    avr32_tc_cmr_t cmr_conf1 = {.waveform = {
            .bswtrg = SET,                                /* Software trigger enabled*/
            .beevt = NOT_SET,                             /* External Event Effect on TIOB*/
            .eevt = NOT_SET,                              /* TIOB is chosen as the external event signal, it is configured as an input*/
            .eevtedg = SET,                               /* Event Selection Rising Edge*/
            .wave = SET,                                  /* 0x01 - Capture Mode is Disabled*/
            .wavsel = AVR32_TC_CMR0_WAVSEL_UP_AUTO,       /* 0x02 - UP mode with automatic trigger on RC Compare*/
            .tcclks = AVR32_TC_CMR0_TCCLKS_TIMER_CLOCK4,  /* Clock is chained from channel 0 */
        }
    };

    /*AVR32_TC0.channel[1].CMR*/
    TC2_CH0.CMR = cmr_conf1 ;
    /* All interrupts are disabled for timers*/
    TC2_CH0.idr = DISABLE_ALL_TIMER_INTERRUPTS;
    /*Clock is Enabled for channel 1*/
    TC2_CH0.CCR.clken = AVR32_TC_CCR0_CLKEN_SIZE;
    /*Enable overflow interrupt*/
    TC2_CH0.ier   =  AVR32_TC_IER0_COVFS_MASK;
    /*Enable output compare match interrupt*/
    TC2_CH0.ier  |=  AVR32_TC_IER0_CPAS_MASK;
    /*Enabling the clock*/
    TC2_CH0.CCR.clken = AVR32_TC_CCR0_CLKEN_SIZE;


    /* Timer channel 1 configuration */
    avr32_tc_cmr_t cmr_conf2 = {.capture = {
            .ldrb = NOT_SET,
            .ldra = SET,                                  /*Loading Each Edge*/
            .wave = NOT_SET,                              /*TIOB is chosen as the external event & configured as an input*/
            .cpctrg = NOT_SET,
            .abetrg = SET,                                /*TIOA as External Trigger*/
            .etrgedg = SET,                               /*Event Selection Rising Edge*/
            .ldbdis = NOT_SET,
            .ldbstop = NOT_SET,
            .burst = NOT_SET,
            .tcclks = AVR32_TC_CMR0_TCCLKS_TIMER_CLOCK4,   /*External timer clock is selected & it gives a clock of 1 Mhz*/
        }
    };
    /*Configuring AVR32_TC1.channel[0].CMR*/
    TC2_CH1.CMR = cmr_conf2 ;
    /*All interrupts are disabled for timers*/
    TC2_CH1.idr = DISABLE_ALL_TIMER_INTERRUPTS;
    /*Enabling the interrupt for the capture*/
    TC2_CH1.ier = AVR32_TC_IER0_LDRAS_MASK ;
    /*Enabling the clock*/
    TC2_CH1.CCR.clken = AVR32_TC_CCR0_CLKEN_SIZE;
    /*Chaining timer channels & External Clock Signal 1 Selection, TIOA0 is Given as i/p*/
    TC2.BMR.tc1xc1s = AVR32_TC_CMR0_TCCLKS_TIMER_CLOCK4;
    /*Software trigger simultaneously for each of the channels*/
    TC2.BCR.sync = AVR32_TC_SYNC_SIZE;

#ifdef ENABLE_HIGH_PRIO_TMR
    avr32_tc_cmr_t cmr_conf3 = {.waveform = {
            .bswtrg = SET,                                  /*Software trigger enabled*/
            .beevt = NOT_SET,                               /*External Event Effect on TIOB*/
            .eevt = NOT_SET,                                /*TIOB is chosen as the external event signal, it is configured as an input*/
            .eevtedg = SET,                                 /*Event Selection Rising Edge*/
            .wave = SET,                                    /*Capture Mode is Disabled*/
            .wavsel = AVR32_TC_CMR0_WAVSEL_UP_AUTO,         /*UP mode with automatic trigger on RC Compare*/
            .tcclks = AVR32_TC_CMR0_TCCLKS_TIMER_CLOCK4,    /*External timer clock is selected & it gives a clock of 1 Mhz*/
        }
    };
    /*Configuring AVR32_TC1.channel[1].CMR*/
    TC2_CH1.CMR = cmr_conf3 ;
    /*All interrupts are disabled for timers*/
    TC2_CH1.idr = DISABLE_ALL_TIMER_INTERRUPTS;
    /*Test value to test the output compare effectively*/
    TC2_CH1.CCR.clken = AVR32_TC_CCR0_CLKEN_SIZE;
#endif
    /*Chaining timer channel 0 & synching them */
    TC2.BCR.sync = AVR32_TC_SYNC_SIZE;

    /*Chaining timer channel 0 & synching them */
    TC2.BCR.sync = AVR32_TC_SYNC_SIZE;
}

void pal_led_init(void)
{
    gpio_enable_output(LED0_PIN);
    gpio_enable_output(LED1_PIN);
    gpio_enable_output(LED2_PIN);
}

void pal_led(led_id_t led_no, led_action_t led_setting)
{
    uint8_t pin;

    switch (led_no)
    {
        case LED_0:
            pin = LED0_PIN;
            break;
        case LED_1:
            pin = LED1_PIN;
            break;
        case LED_2:
            pin = LED2_PIN;
            break;
        default:
            pin = LED2_PIN;
            break;
    }

    switch (led_setting)
    {
        case LED_ON:
            gpio_clr_gpio_pin(pin);
            break;

        case LED_OFF:
            gpio_set_gpio_pin(pin);
            break;

        case LED_TOGGLE:
            gpio_tgl_gpio_pin(pin);
            break;
        default: /* do nothing */
            break;
    }
}

button_state_t pal_button_read(button_id_t button_no)
{
    /* Keep compiler happy. */
    button_no = button_no;

    if (LOW == gpio_get(BUTTON_PIN_0))
    {
        return BUTTON_PRESSED;
    }
    else
    {
        return BUTTON_OFF;
    }
}
